--- a/src/app/components/dashboard/dashboard.component.html
+++ b/src/app/components/dashboard/dashboard.component.html
@@ -75,7 +75,7 @@
       
       <tbody>
         <ng-container *ngFor="let transaction of transactions, let even = even">
-        <tr *ngIf="transaction.budgetName == activeBudget.name" [ngClass]="{'table-row-odd':even,'table-row-even':!even}" (click)="getTransactionInfo(transaction)">
+        <tr *ngIf="transaction.budgetName === activeBudget.name" [ngClass]="{'table-row-odd':even,'table-row-even':!even}" (click)="getTransactionInfo(transaction)">
           <td>{{transaction.date.toDate() | date: 'dd/MM'}}</td>
           <td>{{transaction.typeOfSpending}}</td>
           <td>{{transaction.amount}}</td>
